app/css/home.css
body {
  padding-top: 79px;
}

.divider {
  background-image: url('./../img/Soundwave.svg');
  height: 2.5vh;
  width: 100%;
  margin-top: 1%;
  margin-bottom: 1%;
  margin-left: -1%;
}

h1, h2, h3, h4, h5, h6, .navbar-brand {
  font-family: 'Play', sans-serif;
}

h1 {
  font-size: 40pt;
  margin-top: -5px;
  color: white;
}

.navbar a:hover, .navbar a:focus {
  text-decoration: none;
  color: gray;
}

.navbar.navbar-inverse.navbar-fixed-top {
  height: 80px;
  background-color: #482876;
}

h3 {
  font-size: 23pt;
}

.map-home.row {
  background-color: #5DD9C1;
}

.map-wrapper {
  padding: 0;
  background-color: #5DD9C1;
  height: 100%;
}

#map-canvas {
  height: 88.5vh;
  width: 100%;
  margin: 0;
  padding: 0;
}

.map-filters {
  background-color: white;
  height: 88.5vh;
  overflow: scroll;
}

.location-search {
  padding: 1%;
}

input[type="checkbox"] {
  position: absolute;
  top: -9999px;
  left: -9999px;
}

.switch {
  width: 80px;
  height: 33px;
  background-color: #00cc00;
  display: inline-block;
  position: relative;
  border: 1px black solid;
  margin-right: 1%;
  border-radius: 4px;
  z-index: 1;
  animation-name: to_green;
  animation-duration: 1s;
  -webkit-animation-name: to_green;
  -webkit-animation-duration: 1s;
  -moz-animation-name: to_green;
  -moz-animation-duration: 1s;
}

.switched-off {
  background-color: #ff1919;
  animation-name: to_red;
  animation-duration: .7s;
  -webkit-animation-name: to_red;
  -webkit-animation-duration: 0.7s;
  -moz-animation-name: to_red;
  -moz-animation-duration: .7s;
}

label {
  display: block;
  height: 35px;
}

label p {
  height: 35px;
  padding-bottom: 10px;
  font-size: 12pt;
  display: inline;
  position: absolute;
  padding-top: 5px;
}

.glyphicon {
  color: white;
  position: absolute;
  padding: 8px 12px;
  height: 10%;
}

.clicked {
  top: 0;
  border-radius: 3px;
  background-color: black;
  width: 50%;
  height: 100%;
  -webkit-box-shadow: 2px 0px 2px 0px rgba(0,0,0,0.5);
  -moz-box-shadow:    2px 0px 2px 0px rgba(0,0,0,0.5);
  box-shadow:         2px 0px 2px 0px rgba(0,0,0,0.5);
  animation-name: slide_on;
  animation-duration: .7s;
  /* Chrome, Safari, Opera */
  -webkit-animation-name: slide_on;
  -webkit-animation-duration: 0.7s;
  /* Firefox */
  -moz-animation-name: slide_on;
  -moz-animation-duration: 0.7s;
}

.switched-off .clicked {
  box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.5);
}

input[type=checkbox]:not(:checked) ~ div span {
  /*background-color: #F52F5D;*/
  animation-name: slide_off;
  animation-duration: 1s;
  /* Chrome, Safari, Opera */
  -webkit-animation-name: slide_off;
  -webkit-animation-duration: 0.7s;
  /* Firefox */
  -moz-animation-name: slide_off;
  -moz-animation-duration: 0.7s;
  margin-left: 50%;
  background-color: gray;
}


/* Media Query */

@media only screen and (max-width: 990px) {
  h1, h3 { font-size: 25pt; }
  h1 { margin-top: 0; }
  label p { font-size: 12pt; }
  label p { font-size: 12pt; }
  #map-canvas { border-bottom: solid #5DD9C1 15px;}
  .map-filters {
    height: 100%;
    overflow: visible;
  }
}

/* Key Frames */

/* Standard */
@keyframes slide_off {
  0% {
    background-color: black;
    margin-left: 0%;
  }
  100% {
    margin-left: 50%;
    background-color: gray;
    -webkit-box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.5);
    -moz-box-shadow:    -2px 0px 2px 0px rgba(0,0,0,0.5);
    box-shadow:         -2px 0px 2px 0px rgba(0,0,0,0.5);
  }
}

@keyframes slide_on {
  0% {
    background-color: gray;
    margin-left: 50%;
  }
  100% {
    margin-left: 0%;
    background-color: black;
  }
}

@keyframes to_red {
  0% {
    background-color: #00cc00;
  }
  100% {
    background-color: #ff1919;
  }
}

@keyframes to_green {
  0% {
    background-color: #ff1919;
  }
  100% {
    background-color: #00cc00;
  }
}

/* Chrome, Safari, Opera */
@-webkit-keyframes slide_off {
  0% {
    background-color: black;
    margin-left: 0%;
  }
  100% {
    margin-left: 50%;
    background-color: gray;
    -webkit-box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.5);
    -moz-box-shadow:    -2px 0px 2px 0px rgba(0,0,0,0.5);
    box-shadow:         -2px 0px 2px 0px rgba(0,0,0,0.5);
  }
}

@-webkit-keyframes slide_on {
  0% {
    background-color: gray;
    margin-left: 50%;
  }
  100% {
    margin-left: 0%;
    background-color: black;
  }
}

@-webkit-keyframes to_red {
  0% {
    background-color: #00cc00;
  }
  100% {
    background-color: #ff1919;
  }
}

@-webkit-keyframes to_green {
  0% {
    background-color: #ff1919;
  }
  100% {
    background-color: #00cc00;
  }
}

/* Firefox */
@-moz-keyframes slide_off {
  0% {
    background-color: black;
    margin-left: 0%;
  }
  100% {
    margin-left: 50%;
    background-color: gray;
    -webkit-box-shadow: -2px 0px 2px 0px rgba(0,0,0,0.5);
    -moz-box-shadow:    -2px 0px 2px 0px rgba(0,0,0,0.5);
    box-shadow:         -2px 0px 2px 0px rgba(0,0,0,0.5);
  }
}

@-moz-keyframes slide_on {
  0% {
    background-color: gray;
    margin-left: 50%;
  }
  100% {
    margin-left: 0%;
    background-color: black;
  }
}

@-moz-keyframes to_red {
  0% {
    background-color: #00cc00;
  }
  100% {
    background-color: #ff1919;
  }
}

@-moz-keyframes to_green {
  0% {
    background-color: #ff1919;
  }
  100% {
    background-color: #00cc00;
  }
}

